fixed css issue with the summary bar having too much padding on the bottom. disable debug_rjs for TuneupController#show

--- a/assets/stylesheets/tuneup.css
+++ b/assets/stylesheets/tuneup.css
@@ -70,18 +70,18 @@ version: 2.5.1
 #tuneup #tuneup-data { position: relative;}
 #tuneup #tuneup-top { position: absolute; top: 0px; right: 10px; padding: 0; margin: 0;  z-index: 11000; }
 #tuneup #tuneup-top #tuneup-save-link { float: right; line-height: 45px; vertical-align: bottom; text-align: center; font-weight: bold; padding: 0 9px 0 20px; background: url(/images/tuneup/pointer.gif) 0 50% no-repeat; }
-#tuneup #tuneup-summary {float: right; padding: 9px; width: 400px; padding-bottom: 25px; margin: 3px; text-align: center; color: #ddd; -moz-border-radius: 6px; }
+#tuneup #tuneup-summary {float: right; padding: 9px; width: 400px; padding-bottom: 17px; margin-top: 3px; text-align: center; color: #ddd; -moz-border-radius: 6px 6px 0 0; }
 
 #tuneup #tuneup-data:hover #tuneup-summary { /* h */
   border-bottom: 0px;
   background: #000;
 }
-#tuneup #tuneup-details { display: none; position: absolute; top: 46px; right: 13px; padding: 9px; text-align: left; z-index: 10999;}
+#tuneup #tuneup-details { display: none; position: absolute; top: 46px; right: 10px; padding: 9px; text-align: left; z-index: 10999;}
 #tuneup #tuneup-data:hover #tuneup-details { /* h */
   display: block;
   background: #000;
   min-width: 300px;
-  -moz-border-radius: 6px;
+  -moz-border-radius: 6px 0 6px 6px;
 }
 
 #tuneup ul#tuneup-details ul.tuneup-step-info { margin: 0; padding: 0; }
